--- a/BirthdayCardGeneratorHW/Views/Home/BirthdayCard.cshtml
+++ b/BirthdayCardGeneratorHW/Views/Home/BirthdayCard.cshtml
@@ -46,7 +46,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to Home Page.</a>
+        <a asp-action="Index">Back to Home Page</a>
     </div>
 
     <div style="bottom:0;position: fixed; width:100%;">
